--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/yonycherkos/AddisShop#readme",
   "dependencies": {
+    "dotenv": "^16.1.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
