--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/yonycherkos/AddisShop#readme",
   "dependencies": {
     "dotenv": "^16.1.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
