--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/yonycherkos/AddisShop#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "mongoose": "^7.2.2"
