--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=8080
-MONGO_URI=mongodb+srv://yonycherkos:yonycherkos@cluster0.a04jmwd.mongodb.net/
+MONGO_URI=mongodb+srv://yonycherkos:yonycherkos@cluster0.a04jmwd.mongodb.net/AddisShop?retryWrites=true&w=majority
